--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="min-h-screen flex flex-col"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
